--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
   },
   "homepage": "https://github.com/Leslie346/por-ti#readme",
   "dependencies": {
-    "express": "^4.18.1"
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
+    "ejs": "^3.1.7",
+    "express": "^4.18.1",
+    "express-session": "^1.17.2",
+    "express-validator": "^6.14.0"
   }
 }
