--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "node": "12.11.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "dev": "react-scripts start",
+    "test": "react-scripts test --env=jsdom",
+    "start": "node src/app.js",
+    "build": "react-scripts build",
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -28,6 +32,7 @@
     "ejs": "^3.1.7",
     "express": "^4.18.1",
     "express-session": "^1.17.2",
-    "express-validator": "^6.14.0"
+    "express-validator": "^6.14.0",
+    "serve": "^13.0.2"
   }
 }
