--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "react-scripts start",
     "test": "react-scripts test --env=jsdom",
-    "start": "node src/app.js",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "heroku-postbuild": "npm run build"
