--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "app.js",
   "engines": {
-    "node": "12.14.2",
-    "npm": "8.5.0"
+    "node": "16.14.2"
   },
   "scripts": {
     "dev": "react-scripts start",
