--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,7 @@
 #config all environment variables
-NODE_ENV=
-PORT=
-MY_VERIFY_TOKEN=
-PAGE_ID=
-SERVER_URL=
-TELEGRAM_BOT_TOKEN=
-TELEGRAM_GROUP_ID=
+NODE_ENV=developer
+PORT=3000
+NPM_CONFIG_LOGLEVEL=error
+NODE_VERBOSE=false
+NODE_ENV=developer
+NODE_MODULES_CACHE=true
