--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "react-scripts start",
-    "test": "react-scripts test --env=jsdom",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/app.js",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
@@ -34,6 +34,10 @@
     "express": "^4.18.1",
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
+    "react-scripts": "^5.0.1",
     "serve": "^13.0.2"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.2.0"
   }
 }
