--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
   "scripts": {
     "dev": "react-scripts start",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/app.js",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build"
+    "start": "node src/app.js"
   },
   "repository": {
     "type": "git",
