--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "node": "16.14.2"
   },
   "scripts": {
+    "dev": "react-scripts start",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "build": "react-scripts build",
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -30,7 +34,10 @@
     "express": "^4.18.1",
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^2.1.3",
     "serve": "^13.0.2"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.2.0"
   }
 }
