--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
   "scripts": {
     "dev": "react-scripts start",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/app.js",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build"
+    "start": "node src/app.js"
   },
   "repository": {
     "type": "git",
@@ -24,7 +21,6 @@
   "bugs": {
     "url": "https://github.com/Leslie346/por-ti/issues"
   },
-  "homepage": "https://github.com/Leslie346/por-ti#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
@@ -34,7 +30,6 @@
     "express": "^4.18.1",
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
-    "react-scripts": "^2.1.3",
     "serve": "^13.0.2"
   },
   "devDependencies": {
