--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "16.14.2"
   },
   "scripts": {
-    "start": "node src/app.js"
+    "start": "nodemon src/app.js"
   },
   "repository": {
     "type": "git",
@@ -28,9 +28,13 @@
     "express": "^4.18.1",
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
+    "jquery": "^3.6.0",
+    "mysql2": "^2.3.3",
+    "npm": "^8.13.2",
+    "sequelize": "^6.20.1",
     "serve": "^13.0.2"
   },
   "devDependencies": {
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.4.1"
   }
 }
