--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "16.14.2"
   },
   "scripts": {
-    "start": "nodemon src/app.js"
+    "start": "node src/app.js"
   },
   "repository": {
     "type": "git",
