--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "url": "https://github.com/Leslie346/por-ti/issues"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
