--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jquery": "^3.6.0",
     "mysql2": "^2.3.3",
     "npm": "^8.13.2",
+    "sass": "^1.54.5",
     "sequelize": "^6.20.1",
     "serve": "^13.0.2"
   },
